syntax = "proto3";
option java_multiple_files = true;
package com.server.service;
import "google/protobuf/timestamp.proto";

// The greeting service definition.
service Job {
  rpc getJobList (JobRequest) returns (JobResult) {}

}

// The request message containing the user's name.
message JobRequest {
  JobEntity jobEntity = 1;
}

// The response message containing the greetings
message JobResult {
  repeated JobEntity jobEntity = 1;
}

message JobEntity {
  int32  id = 1;
  string title = 2;
  string company = 3;
  string requireYear = 4;
  google.protobuf.Timestamp datePost = 5;
  google.protobuf.Timestamp dateExpired = 6;
  string link = 7;
  string description = 8;
}